deploy/zot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zot-ingress
  namespace: zot
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: registry.hexalith.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zot
                port:
                  number: 5000
  tls:
    - hosts:
        - registry.hexalith.com
      secretName: zot-tls
